Update 0.Analysis of Algorithms.md

--- a/자료구조/0.Analysis of Algorithms.md
+++ b/자료구조/0.Analysis of Algorithms.md
@@ -1,13 +1,32 @@
 ## Theoretical Analysis
 
-1) Input Size n에 대해 function의 성능을 측정하는 방법
-2) 가능한 모든 Input에 대해서 테스트
-3) H/W, S/W 성능을 배제하고 성능 측정이 가능한 방법
+1) Input Size n에 대해 function의 성능을 측정하는 방법  
+2) 가능한 모든 Input에 대해서 테스트  
+3) H/W, S/W 성능을 배제하고 성능 측정이 가능한 방법  
 
 <br>
 <br>
 
-## Primitive Operations 
+## Primitive Operations
+
+알고리즘에 대한 성능평가를 하기위한 기초 연산들  
+ex) +, -, *, /, =, if, call  
+ex) 변수할당, 배열접근, 함수호출, 비교연산  
+
+## Counting Primitive Operations
+보다 정확하게 Primitive를 연산하는 방법  
+
+```
+Algorithm arrayMax(A, n)  
+  currentMax <- A[0]
+  for i <- 1 to n-1 do
+    if A[i] > currentMax then
+      currentMax <- A[i]
+  
+  { increment counter i }
+  
+  return currentMax
+```
 
 
 
