Update 0.Analysis of Algorithms.md

--- a/자료구조/0.Analysis of Algorithms.md
+++ b/자료구조/0.Analysis of Algorithms.md
@@ -18,15 +18,21 @@ ex) 변수할당, 배열접근, 함수호출, 비교연산
 
 ```
 Algorithm arrayMax(A, n)  
-  currentMax <- A[0]
-  for i <- 1 to n-1 do
-    if A[i] > currentMax then
-      currentMax <- A[i]
-  
-  { increment counter i }
-  
-  return currentMax
+  currentMax <- A[0]             : 2      (배열접근, 변수할당)
+  for i <- 1 to n-1 do           : 2n     (n-1번의 변수할당, n번의 비교연산, 1번의 for문 done)
+    if A[i] > currentMax then    : 2(n-1) (n-1번의 배열접근, n-1번의 비교연산)
+      currentMax <- A[i]         : 2(n-1) (n-1번의 배열접근, n-1번의 변수할당)
+  { increment counter i }        : 2(n-1) (n-1번의 + 연산, n-1번의 변수할당)
+  return currentMax              : 1      (함수 반환)
 ```
+  
+Input의 사이즈가 n일 때, 이 알고리즘의 Primitive Operations은 8n-3이다.  
+
+## Big-Oh Notation
+
+
+
+
 
 
 
