Update 0.Analysis of Algorithms.md

--- a/자료구조/0.Analysis of Algorithms.md
+++ b/자료구조/0.Analysis of Algorithms.md
@@ -13,6 +13,10 @@
 ex) +, -, *, /, =, if, call  
 ex) 변수할당, 배열접근, 함수호출, 비교연산  
 
+
+<br>
+<br>
+
 ## Counting Primitive Operations
 보다 정확하게 Primitive를 연산하는 방법  
 
@@ -28,11 +32,28 @@ Algorithm arrayMax(A, n)
   
 Input의 사이즈가 n일 때, 이 알고리즘의 Primitive Operations은 8n-3이다.  
 
+<br>
+<br>
+
 ## Big-Oh Notation
+최악의 경우 알고리즘의 시간 복잡도를   
 
+![image](https://user-images.githubusercontent.com/50320556/171807497-b58ce74a-6911-4475-8797-1a0b3316674c.png)
 
+<br>
 
+### Big-Oh의 종류
+O(1) -> O(logn) -> O(n) -> O(nlogn) -> O(n^2) -> O(2^n)
 
+<br>
 
+### Big-oh Example
+1) 7n-2  : O(n)
+2) 3n^3 + 20n^2 + 5  : O(n^3)  
+3) 3logn + 5  : O(logn)
 
+<br>
 
+### 또 다른 표기법
+1. Big-Theta : 알고리즘의 정확한 시간 복잡도  
+2. Bit-Omega : 최상의 경우의 알고리즘 시간 복잡도
