--- a/기타/2019년 국가직9급.md
+++ b/기타/2019년 국가직9급.md
@@ -18,11 +18,10 @@
 ### 프로세스 vs 스레드
 
 - 프로세스  
-프로세스의 구성은 제어흐름(실행)부분과 실행환경 부분으로 분리가 가능하다.  
-하나의 프로세스에는 한 개 또는 여러 개의 스레드가 포함될 수 있다.  
+1. 프로세스의 구성은 제어흐름(실행)부분과 실행환경 부분으로 분리가 가능하다.  
+2. 하나의 프로세스에는 한 개 또는 여러 개의 스레드가 포함될 수 있다.  
 
 <br>
-
 - 스레드 
 1. 프로세스의 실행부분을 담당하여 실행의 기본단위  
 2. 하나의 스레드는 여러 프로세스에 포함될 수 없다.  
@@ -30,4 +29,49 @@
 
 <br>
 <br>
+
+### 정규화 과정
+
+1NF : 원자값 분해  
+2NF : 부분함수 종속제거
+3NF : 이행함수 종속제거
+BCNF : 결정자가 후보키가 아닌 함수 종속제거
+4NF : 함수종속이 아닌 다치종속 제거
+5NF : 후보키를 통하지 않은 조인종속 제거
+
+<br>
+<br>
+
+### TCP vs UDP
+
+- TCP  
+1. 연결기반이며, 안정성과 순서를 보장한다.  
+2. 패킷을 자동으로 나눠준다.  
+3. 혼잡제어 : 통신망 특정 부분에 트래픽이 몰리는 것을 방지  
+4. 파일을 쓰는 것처럼 사용하기 쉽다.  
+
+<br>
+
+- UDP
+1. 연결기반이 아니며, 안정성과 순서를 보장하지 않는다.  
+2. 직접 패킷을 나눠야 한다.  
+
+<br>
+<br>
+
+### IP 단편화
+
+- MTU(Maximum transmission unit)  
+링크 계층 프레임이 전달할 수 있는 최대 데이터 양  
+<br>
+
+- IP 단편화, 재결합에 필요한 옵션  
+식별자, 플래그, 단편화 오프셋  
+
+- 오프셋은 첫번째 단편의 페이로드 / 8(바이트)  
+
+<br>
+<br>
+
+### Go-Back-N 프로토콜
 
