--- a/기타/2019년 국가직9급.md
+++ b/기타/2019년 국가직9급.md
@@ -66,5 +66,14 @@ BCNF : 결정자가 후보키가 아닌 함수 종속제거
 
 <br>
 
-### Go-Back-N 프로토콜
+### GBn vs SR 프로토콜
+- Go-Back-N 프로토콜  
+잘못된 패킷 번호부터 다시 재전송하는 기법  
+
+- Selective Repeat 프로토콜  
+잘못받은 패킷 번호만 다시 재전송하는 기법
+
+<br>
+
+
 
