--- a/기타/2019년 국가직9급.md
+++ b/기타/2019년 국가직9급.md
@@ -75,5 +75,11 @@ BCNF : 결정자가 후보키가 아닌 함수 종속제거
 
 <br>
 
+### FIFO 알고리즘
+FIFO = FCFS (First Come First Service)로 큐로 쉽게 관리한다.  
+Convoy Effect 발생 : Burst Time(실행시간)이 긴 프로세스가 CPU 독점  
+단독사용하지 않고, 다른 스케쥴링에 보조적으로 사용  
 
+<br>
 
+### 코드 번역기
