--- a/네트워크/네트워크 토폴로지.md
+++ b/네트워크/네트워크 토폴로지.md
@@ -1,5 +1,6 @@
 ### 네트워크 토폴로지  
 컴퓨터 네트워크에 참여하는 요소 (링크, 노드)들의 배치형태, 망구성 방식  
+  
 물리적 토폴로지 : 네트워크 구성 요소의 "배치"로 결정  
 논리적 토폴로지 : 네트워크 구성 요소의 "데이터 흐름"으로 결정  
   
@@ -11,3 +12,13 @@ ex) 물리적 토폴로지 : 성형, 논리적 토폴로지 : 링형
 <br>
 
 ### 네트워크 토폴로지 종류 
+1) 성형(Star)  
+노드 중앙에 위치한 주 노드를 통해 다른 노드들과 통신을 할 수 있는 형태  
+
+![image](https://user-images.githubusercontent.com/50320556/172035389-475ee0f6-a643-49e9-8c03-0596778c361f.png)  
+  
+장점 : 장애 발견이 쉽고, 관리가 용이  
+단점 : 주 노드 장애시, 전체 네트워크 사용 불가  
+
+<br> 
+
