--- a/네트워크/네트워크 토폴로지.md
+++ b/네트워크/네트워크 토폴로지.md
@@ -22,3 +22,32 @@ ex) 물리적 토폴로지 : 성형, 논리적 토폴로지 : 링형
 
 <br> 
 
+2) 버스형(Bus)  
+버스라는 공통 배선에 각 노드가 연결된 형태  
+  
+![image](https://user-images.githubusercontent.com/50320556/172035519-69b8212b-cfd0-405b-9250-f042bf032f4b.png)  
+  
+장점 : 노드의 추가 및 삭제가 용이, 장애 전이가 없음  
+단점 : 노드수가 증가하면 트래픽이 증가해 성능 저하  
+
+<br>
+
+3) 링형(Ring)  
+각 노드들이 연결되어 원형을 이루는 형태  
+  
+![image](https://user-images.githubusercontent.com/50320556/172035563-7782b323-e1a3-44c2-b6f9-0ce46389ebcc.png)  
+  
+장점 : 단방향 통신으로 신호 증폭이 가능해 거리 제약이 적음  
+단점 : 노드 추가, 삭제가 용이하지 않음  
+
+<br>
+
+4) 망형(Mesh)  
+그물망 형태로 다수의 노드 쌍이 동시에 통신할 수 있는 형태  
+  
+![image](https://user-images.githubusercontent.com/50320556/172035619-30704225-7f9e-4aed-a82a-c07d0534309d.png)  
+  
+![image](https://user-images.githubusercontent.com/50320556/172035626-a4098810-3c4f-4299-ad29-70274ee6cfa7.png)  
+  
+장점 : 장애 전이가 없음, 회선장애에 유연한 대처가 가능  
+단점 : 회선구축비용이 많이듬, 노드추가 시 비용부담 발생  
