--- a/네트워크/네트워크 토폴로지.md
+++ b/네트워크/네트워크 토폴로지.md
@@ -13,4 +13,46 @@ ex) 물리적 토폴로지 : 성형, 논리적 토폴로지 : 링형
 
 ### 네트워크 토폴로지 종류  
 1) 트리형(계층형)  
-[개념] 
+[개념] : Tree 구조의 형태  
+[장점] : 통제 및 유지보수가 쉽다. 추가,삭제가 쉽다. 에러발생 발견이 쉽다.  
+[단점] : 병목현상 발생 가능하다. 중앙컴퓨터 오류 시 전체에 영향을 준다.  
+
+![image](https://user-images.githubusercontent.com/50320556/172035778-1cf72bac-c2a8-4cc8-9037-9bd065b7d4f1.png)  
+
+<br> 
+
+2) 버스형(수평형)  
+[개념] : 중앙 통신 회선 하나에 여러 노드를 연결하는 형태  
+[장점] : 추가, 삭제가 용이. 장애 전이가 없다.  
+[단점] : 충돌이 자주 발생. 회선길이에 제한. 느려질 수 있음.  
+  
+![image](https://user-images.githubusercontent.com/50320556/172035802-8f9227be-6d42-4ddc-ab1f-3c873d0fbcf6.png)  
+
+<br>
+
+3) 성형  
+[개념] : 중앙 컴퓨터를 중식으로 연결된 중앙 집중식 형태  
+[장점] : 유지보수 및 관리 용이. 오류발견이 쉬움.  
+[단점] ; 중앙 컴퓨터 고장 시, 전체 네트워크 마비  
+  
+![image](https://user-images.githubusercontent.com/50320556/172035811-098b51b9-ac29-4cc2-a9e3-894ef6ead721.png)  
+
+<br>
+
+4) 링형
+[개념] : 단방향 전송 형태  
+[장점] : 오류발견이 쉬움.  
+[단점] ; 추가, 삭제가 어렵다. 중계기 기능이 필요.  
+  
+![image](https://user-images.githubusercontent.com/50320556/172035825-cdc7db7e-8332-4e2c-afbf-bce0cd369beb.png)  
+
+<br>
+
+5) 망형  
+[개념] : 모든 노드들이 상호 연결된 형태  
+[장점] : 병목 현상에 대한 면역.  
+[단점] : 가장 많은 통신 선로가 필요.  
+  
+![image](https://user-images.githubusercontent.com/50320556/172035841-c3369ab8-bce4-4540-91f1-3c1b69cd97a3.png)  
+
+
