--- a/기타/2019년 국가직9급.md
+++ b/기타/2019년 국가직9급.md
@@ -139,3 +139,19 @@ SW개발을 순차적으로 진행하는 프로세스 모델
   
 5) 진화적 모델  
 개발버전에 따라 먼저 출시하고 피드백을 반영하며 진화개발하는 모델  
+
+<br>
+
+### RAID (Redundant Array of Independent Disk)
+[개념] : 여러개의 하드디스크에 일부 중복된 데이터를 나눠 저장하는 기술  
+[종류]  
+1) RAID0(Striping)    : 데이터를 여러 디스크에 분산 저장한다.  
+2) RAID1(Mirroring)   : 데이터를 두 개 이상의 디스크에 패리티 없이 중복 저장한다.    
+3) RAID2(Hamming)     : 데이터를 비트 단위로 분산 저장하고 여러개의 해밍코드 검사디스크를 사용한다.  
+4) RAID3              : 데이터를 바이트 단위로 분산 저장하고 전용 패리티 검사디스크를 사용한다.  
+5) RAID4(Parity)      : 데이터를 블록 단위로 분산 저장하고 저장시 매번 패리티 정보를 갱신한다.  
+6) RAID5(분산 패리티)  : 패리티정보를 모든 디스크에 분산 저장하고 다중사용자 환경에서 좋다. 최소3개필요.  
+7) RAID6(Dual Parity) : 이중 분산 패리티 구성을 포함해 장애대비능력이 높다. 복구시간이 길다.  
+
+<br> 
+
