--- a/운영체제/프로세스.md
+++ b/운영체제/프로세스.md
@@ -4,7 +4,7 @@
 
 ### 프로세스 스케쥴링 알고리즘
 
-- 비선점(non-preemptive) : 강제로 빼앗아 사용할 수 없는 기법  
+#### 비선점(non-preemptive) : 강제로 빼앗아 사용할 수 없는 기법  
   
 1) FCFS (First Come First Serve)  
 CPU를 먼저 요청한 프로세스가 먼저 CPU를 배정받는 기법   
@@ -20,7 +20,7 @@ Response Ratio = (대기시간 + CPU요구량) / CPU 요구량
 
 <br>
   
-- 선점(preemptive) : 강제로 빼앗아 사용할 수 있는 기법  
+#### 선점(preemptive) : 강제로 빼앗아 사용할 수 있는 기법  
   
 1) 라운드로빈(Round Robin)  
 FCFS 스케쥴링을 기반으로 하지만, 일정 시간이 지나면 다른 프로세스로 CPU를 할당하는 기법  
