--- a/운영체제/프로세스.md
+++ b/운영체제/프로세스.md
@@ -1,6 +1,24 @@
+### 프로세스 메모리 구조
 
+![image](https://user-images.githubusercontent.com/50320556/172041203-a9c05e12-0d9b-4043-980d-9ef12019d894.png)  
 
+[구성] : stack, heap, data, code(text)  
+1) stack 영역  
+지역변수, 매개변수, 리턴값 등 잠시 사용되었다가 사라지는 데이터를 저장  
+함수 호출 시 할당되고, 반환 시 소멸  
+컴파일 때, 크기가 결정   
 
+2) heap 영역  
+메모리 주소 값에 의해서만 참조되고 사용되는 영역  
+런타임 때, 크기가 결정  
+
+3) data 세그먼트  
+전역변수, 정적변수 등 프로그램 시작될 때 할당되어 프로그램 종료 시 소멸되는 데이터를 저장  
+
+4) code 세그먼트  
+실행할 프로그램의 코드를 저장  
+
+<br>
 
 ### 프로세스 스케쥴링 알고리즘
 
