--- a/운영체제/프로세스.md
+++ b/운영체제/프로세스.md
@@ -20,6 +20,26 @@
 
 <br>
 
+### 프로세스 상태 전이도
+
+![image](https://user-images.githubusercontent.com/50320556/172041426-5b4aec05-9bc4-4b1f-a933-60b80e022737.png)  
+
+#### 프로세스 상태  
+1) 생성(New)        : 프로세스 생성 상태  
+2) 준비(Ready)      : 프로세스가 CPU에 할당받기를 기다리는 상태  
+3) 실행(Running)    : 프로세스가 CPU에 할당받아서 실행중인 상태  
+4) 대기(Waiting)    : 프로세스가 입출력이나 이벤트를 기다리는 상태  
+5) 종료(Terminated) : 프로세스가 실행을 끝내고 종료한 상태  
+
+#### 프로세스의 상태전이
+1) Admitted                : 프로세스의 생성을 승인받음  
+2) Dispatch                : 준비 상태에 있던 프로세스가 스케쥴러에 의해 실행되는 상태  
+3) Interrupt               : Timeout, 입출력 등으로 실행 프로세스를 준비상태로 전환  
+4) I/O or Event Wait       : 실행중인 프로세스가 I/O나 이벤트 처리 시, 해당 작업이 끝날 때까지 대기상태로 전환  
+5) I/O or Event Completion : I/O나 이벤트 처리가 끝난 프로세스를 다시 준비상태로 전환
+
+<br>
+
 ### 프로세스 스케쥴링 알고리즘
 
 #### 비선점(non-preemptive) : 강제로 빼앗아 사용할 수 없는 기법  
