--- a/운영체제/프로세스.md
+++ b/운영체제/프로세스.md
@@ -35,8 +35,8 @@
 1) Admitted                : 프로세스의 생성을 승인받음  
 2) Dispatch                : 준비 상태에 있던 프로세스가 스케쥴러에 의해 실행되는 상태  
 3) Interrupt               : Timeout, 입출력 등으로 실행 프로세스를 준비상태로 전환  
-4) I/O or Event Wait       : 실행중인 프로세스가 I/O나 이벤트 처리 시, 해당 작업이 끝날 때까지 대기상태로 전환  
-5) I/O or Event Completion : I/O나 이벤트 처리가 끝난 프로세스를 다시 준비상태로 전환
+4) I/O or Event Wait       : 실행중인 프로세스가 I/O나 이벤트 처리를 위해 대기상태로 전환  
+5) I/O or Event Completion : I/O나 이벤트가 발생해 프로세스를 다시 준비상태로 전환
 
 <br>
 
