--- a/기타/2019년 국가직9급.md
+++ b/기타/2019년 국가직9급.md
@@ -155,3 +155,23 @@ SW개발을 순차적으로 진행하는 프로세스 모델
 
 <br> 
 
+### DRAM VS SRAM
+#### DRAM (Dynamic Ram)
+1) 정보를 축전기의 충전에 의해 저장한다.  
+2) 집적도가 높고 소비 전력이 낮다.
+3) 대용량 메모리에 적합하다. 
+4) SRAM보다 느리다.  
+
+#### SRAM
+1) 한 번 저장된 정보는 영구 저장된다.  
+2) 집적도가 낮고 소비전력이 크다.  
+3) 캐시기억장치에 사용된다.  
+4) DRAM보다 빠르다.  
+5) 플립플롭으로 구성된다.  
+
+<br>
+
+
+
+
+
