--- a/운영체제/임계구역과 세마포어.md
+++ b/운영체제/임계구역과 세마포어.md
@@ -21,12 +21,12 @@ Thread의 진입 유무는 유한 시간 내에 결정된다.
 [개념] : Signaling 메커니즘으로 최대 N개의 프로세스가 Wait 함수를 통해 임계 영역에 진입 가능하게 하는 도구이다.  
 [구성] : Wait(락을 거는 함수), Signal(락을 해제하는 함수)  
 [특징]  
-1. 락을 걸지 않은 Thread도 Signal을 보내 락을 해제할 수 있다.  
-2. 연산 중에 인터럽트 될 수 없다.  
+1) 락을 걸지 않은 Thread도 Signal을 보내 락을 해제할 수 있다.  
+2) 연산 중에 인터럽트 될 수 없다.  
 
 #### Mutex
 [개념] : Locking 메커니즘으로 오직 1개만 임계 영역에 진입 가능하게 하는 도구이다.  
 [구성] : Semaphore와 동일  
 [특징]  
-오직 임계영역에 들어온 Thread만이 락을 해제할 수 있다.  
+1) 오직 임계영역에 들어온 Thread만이 락을 해제할 수 있다.  
 
